--- a/javaQuarkusShip/pom.xml
+++ b/javaQuarkusShip/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>pl.battleships</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.11-SNAPSHOT</version>
+            <version>0.0.16-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.yaml</groupId>
@@ -210,4 +210,25 @@
             </properties>
         </profile>
     </profiles>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/0i99/battleships</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
 </project>
